*SVN*

* Added migration generator: ./script/generate migration add_system_settings

* Added "migrate" as rake task to execute all the pending migrations from db/migrate

* Fixed that model generator would make fixtures plural, even if ActiveRecord::Base.pluralize_table_names was false #1185 [Marcel Molina]

* Added a DOCTYPE of HTML transitional to the HTML files generated by Rails #1124 [Michael Koziarski]

* SIGTERM also gracefully exits dispatch.fcgi.  Ignore SIGUSR1 on Windows.

* Add the option to manually manage garbage collection in the FastCGI dispatcher.  Set the number of requests between GC runs in your public/dispatch.fcgi [skaes@web.de]

* Allow dynamic application reloading for dispatch.fcgi processes by sending a SIGHUP. If the process is currently handling a request, the request will be allowed to complete first. This allows production fcgi's to be reloaded without having to restart them.

* RailsFCGIHandler (dispatch.fcgi) no longer tries to explicitly flush $stdout (CgiProcess#out always calls flush)

* Fixed rakefile actions against PostgreSQL when the password is all numeric #1462 [michael@schubert.cx]

* ActionMailer::Base subclasses are reloaded with the other rails components #1262

* Made the WEBrick adapter not use a mutex around action performance if ActionController::Base.allow_concurrency is true (default is false)

* Fixed that mailer generator generated fixtures/plural while units expected fixtures/singular #1457 [Scott Barron]

* Added a 'whiny nil' that's aim to ensure that when users pass nil to methods where that isn't appropriate, instead of NoMethodError? and the name of some method used by the framework users will see a message explaining what type of object was expected. Only active in test and development environments by default #1209 [Michael Koziarski]
