@@ -1,5 +1,7 @@
 *SVN*
 
+* Added an EXPERIMENTAL gateway.cgi for getting high-speed performance through vanilla CGI using a long-running, DRb-backed server in the background (using script/listener and script/tracker) #1603 [Nicholas Seckar]
+
 * Added migration generator: ./script/generate migration add_system_settings
 
 * Added "migrate" as rake task to execute all the pending migrations from db/migrate
